--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -25,15 +25,29 @@ permalink: "/items"
                 {% if page.author %}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
-						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+						<img class="author-thumb" src="{% if author.image contains "http" %}{{ author.image }}{% else %}{{site.baseurl}}/images/authors/{{ author.image }}{% endif %}" alt="{{ author.display_name }}">
 					</div>
-					<div class="col-md-10">
+					<div class="col-md-6">
 						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
 						<p><span class="author-description">{{ author.description }}</span>						
 					</div>
+				<!-- Post Categories -->
+					<div class="col-md-2">
+						<ul class="tags">
+							{% assign sortedCategories = page.categories | sort %}
+							{% for category in sortedCategories %}
+							<li>                        
+							 <a class="smoothscroll" href="{{site.baseurl}}/groups/#{{ category | replace: " ","-" }}">{{ category }}</a>
+							</li>
+							{% endfor %}
+						</ul>
+					</div>
+					<!-- End Categories -->
+
 				</div>				
                 {% endif %}
-                
+ 
+               
                 <!-- Post Title -->
 				<h1 class="posttitle">{{ page.title }}</h1> 
                 
@@ -66,30 +80,7 @@ permalink: "/items"
                 {% endif %}
                 </small>
             </p>
-            
-			<!-- Post Categories -->
-			<div class="after-post-tags">
-				<ul class="tags">
-                    {% assign sortedCategories = page.categories | sort %}
-                    {% for category in sortedCategories %}
-                    <li>                        
-                     <a class="smoothscroll" href="{{site.baseurl}}/itemgroups.html#{{ category | replace: " ","-" }}">{{ category }}</a>
-                    </li>
-                    {% endfor %}
-				</ul>
-			</div>
-			<!-- End Categories -->
-            
-            <!-- Prev/Next -->
-            <div class="row PageNavigation d-flex justify-content-between font-weight-bold">
-            {% if page.previous.url %}
-            <a class="prev d-block col-md-6" href="{{page.previous.url | absolute_url}}"> &laquo; {{page.previous.title}}</a>
-            {% endif %}
-            {% if page.next.url %}
-            <a class="next d-block col-md-6 text-lg-right" href="{{page.next.url | absolute_url}}">{{page.next.title}} &raquo; </a>
-            {% endif %}
-            <div class="clearfix"></div>
-            </div>
+                        
             <!-- End Categories -->
 
 		</div>
