--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -66,7 +66,10 @@ permalink: "/items"
 
 
 			<div class="element-set">
-				<h2>Dublin Core</h2>
+
+				<div class="section-title col-md-12 mt-4">
+				<h2 id="Dublin Core"><span class="text-capitalize">Dublin Core</span></h2>
+				</div>
 					<div id="dublin-core-title" class="element">
 				<h3>Title</h3>
 							<div class="element-text">{{ page.title }}</div>
