--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -4,7 +4,11 @@ layout: default
 permalink: "/stories"
 ---
 
-<h1>View All History Harvest Artifacts</h1>
+<h1>Read Our Stories</h1>
+
+As part of the History Harvest, each student in the course chose an object significant to them. We explored that object's history, looked for objects like it in the IU archives, at the Monroe County History Center, at the Mathers Museum of World Cultures, and in the objects that our fellow Hoosiers brought to the History Harvest.
+
+These are our stories. And yours.
 
 <div class="row listrecent"> 
 {% assign pages_list = docs %}
