--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -8,13 +8,13 @@ permalink: "/stories"
 
 As part of the History Harvest, each student in the course chose an object significant to them. We explored that object's history, looked for objects like it in the IU archives, at the Monroe County History Center, at the Mathers Museum of World Cultures, and in the objects that our fellow Hoosiers brought to the History Harvest.
 
-These are our stories. And yours.
+These are our stories. We hope you'll add yours by [taking our survey and bringing an object to our History Harvest on March 19 or March 22](https://docs.google.com/forms/d/e/1FAIpQLScnAh6QqC09MJleFKIM7MMxayxLX2HFWQAoQvzNXnpdD8vU4w/viewform?usp=sf_link)
 
 <div class="row listrecent"> 
-{% assign pages_list = site.stories %}
-{% for story in site.stories %}
-{% if story.shortdesc != null %}
-{% include storybox.html %}
+{% assign pages_list = docs %}
+{% for item in site.items %}
+{% if item.shortdesc != null %}
+{% include itembox.html %}
 {% endif %}
 {% endfor %}
-</div>
+</div>    
