--- a/_layouts/items.html
+++ b/_layouts/items.html
@@ -14,3 +14,5 @@ permalink: "/items"
 {% endif %}
 {% endfor %}
 </div>    
+
+<!--swipe through photos so one is larger and the small thumbnails show at the bottom; do we need thumbnails for each photo or can I do that automatically?-->
