--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@ ga('send', 'pageview');
                 <a class="nav-link" href="{{ site.baseurl }}/stories">Read Our Stories</a>
                 </li>
                 
- 
+<!-- 
                  {% if page.url == "/" %}
                 <li class="nav-item active">
                 {% else %}
@@ -99,9 +99,17 @@ ga('send', 'pageview');
                 {% endif %}
                 <a class="nav-link" href="{{ site.baseurl }}/items">View All Artifacts</a>
                 </li>
-                
  
-                              
+               
+                {% if page.url == "/about.html" %}
+                <li class="nav-item active">
+                {% else %}
+                <li class="nav-item">
+                {% endif %}
+                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                </li>
+-->                
+                
                 
                 {% include search-lunr.html %}
                 
@@ -173,7 +181,7 @@ ga('send', 'pageview');
 
 			{% assign categories =  site.items | map: 'categories' | join: ','  | split: ',' | uniq %}
 			{% for category in categories %}
-            <a href="{{site.baseurl}}/items#{{ category | downcase | downcase | url_escape | strip | replace: ' ', '-' }}">{{ category | camelcase }} artifacts</a>
+            <a href="{{site.baseurl}}/groups#{{ category | downcase | downcase | url_escape | strip | replace: ' ', '-' }}">{{ category | camelcase }} artifacts</a>
             {% endfor %}
 
 
