--- a/_includes/itembox.html
+++ b/_includes/itembox.html
@@ -4,13 +4,13 @@
 <div class="col-lg-4 col-md-6 mb-30px card-group">
     <div class="card h-100">
         <div class="maxthumb">
-            <a href="{{ item.url | absolute_url }}">
-                {% if item.itemid %} <img class="img-fluid" src="{{ absolute_url }}/assets/items/{{ item.itemid }}_thumb.jpg" alt="{{ item.title }}"> {% endif %}
+            <a href="{{ site.baseurl }}{{ item.url }}">
+                {% if item.itemid %} <img class="img-fluid" src="{{ site.baseurl }}/assets/items/{{ item.itemid }}_thumb.jpg" alt="{{ item.title }}"> {% endif %}
             </a>
         </div>
         <div class="card-body">
             <h2 class="card-title">
-                <a class="text-dark" href="{{ item.url | absolute_url }}">{{ item.title }}</a>
+                <a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
             </h2>
             <h4 class="card-text">{{ item.shortdesc | strip_html | truncatewords:30 }}</h4>            
         </div>
@@ -20,9 +20,13 @@
                 <span class="author-meta">
                 <span class="post-name">{{ item.itemcontributor }}</span><br/>
                 {% endif %}
-                <span class="post-date">{{ item.categories }}</span>
+                <span class="post-date">
+               {% assign sortedCategories = item.categories | sort %}
+               {% for category in sortedCategories %}
+               <a class="btn follow" href="{{site.baseurl}}/groups#{{ category | replace: " ","-" }}">{{ category }}</a>
+               {% endfor %}
+               </span>
                 </span>
-                <span class="post-read-more"><a href="{{ item.url | absolute_url }}" title="More about this item"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                 <div class="clearfix"></div>
             </div>
         </div>
