--- a/_layouts/items.html
+++ b/_layouts/items.html
@@ -1,10 +1,10 @@
 ---
 title: "Items"
-layout: default
+layout: page
 permalink: "/items"
 ---
 
-<h1>View All History Harvest Artifacts</h1>
+{{ content }}
 
 <div class="row listrecent"> 
 {% assign pages_list = docs %}
