--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -79,7 +79,7 @@ permalink: "/stories"
 
 
 			<div class="section-title col-md-12 mt-4" style="padding-left: 0;">
-			<h2><span class="text-capitalize">Related Items</span></h2>
+			<h2><span class="text-capitalize">Other artifacts in this exhibit: {{ page.exhibittitle }}</span></h2>
 			</div>
 			<div class="row listrecent"> 
 			{% assign pages_list = docs %}
