--- a/_includes/itembox.html
+++ b/_includes/itembox.html
@@ -5,7 +5,14 @@
     <div class="card h-100">
         <div class="maxthumb">
             <a href="{{ site.baseurl }}{{ item.url }}">
-                {% if item.itemid %} <img class="img-fluid" src="{{ site.baseurl }}/assets/items/{{ item.itemid }}_thumb.jpg" alt="{{ item.title }}"> {% endif %}
+			{% if item.itemid %}
+				{% capture ItemImagePath %}{{ site.baseurl }}/assets/items/{{ item.itemid }}_th{% endcapture %}
+				{% for static_file in site.static_files %}
+					{% if static_file.path contains ItemImagePath %}
+						<img class="img-fluid" src="{{ static_file.path }}" alt="{{ page.title }}">
+					{% endif %}
+				{% endfor %}
+			{% endif %}
             </a>
         </div>
         <div class="card-body">
