--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/items">View Community Artifacts</a>
+                <a class="nav-link" href="{{ site.baseurl }}/items">View IUB Community Artifacts</a>
                 </li>
  
                  {% if page.url == "/" %}
@@ -104,7 +104,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/archiveitems">View Bloomington Historical/Archival Artifacts</a>
+                <a class="nav-link" href="{{ site.baseurl }}/archiveitems">View Related Museum Artifacts</a>
                 </li>
  
 <!-- 
