--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -692,3 +692,17 @@ License: https://www.wowthemes.net/freebies-license/
 .spoiler:hover:after {
     opacity:1;
 }
+figure {
+  float: right;
+  width: 30%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin silver solid;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+img.scaled {
+  width: 100%;
+}
