--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/stories">Read Our Stories</a>
+                <a class="nav-link" href="{{ site.baseurl }}/stories">A200 Histories</a>
                 </li>
                 
                  {% if page.url == "/" %}
@@ -96,7 +96,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/items">View IUB Community Artifacts</a>
+                <a class="nav-link" href="{{ site.baseurl }}/items">IUB History Harvest Artifacts</a>
                 </li>
  
                  {% if page.url == "/" %}
@@ -104,7 +104,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/archiveitems">View Related Museum Artifacts</a>
+                <a class="nav-link" href="{{ site.baseurl }}/archiveitems">Related Museum & Archival Objects</a>
                 </li>
  
 <!-- 
